Fix contrast color for small text -- light green variable

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   --dark-green: rgba(34, 48, 8, 1);
   --dark-pink: rgba(207, 111, 138, 1);
   --medium-green: rgba(45, 64, 11, 0.75);
-  --light-green: rgb(147, 152, 139);
+  --light-green: rgb(78, 82, 71);
   --light-pink: rgba(233, 223, 225, 1);
 }
 
